[gd_scene load_steps=8 format=3 uid="uid://d21uspc35d462"]

[ext_resource type="Script" path="res://scenes/enemy/enemy1.gd" id="1_jvbon"]
[ext_resource type="Texture2D" path="res://graphics/Grafika_bez_nazwy_1.png" id="2_goaiw"]
[ext_resource type="Script" path="res://scenes/enemy/AI.gd" id="3_3kvcm"]
[ext_resource type="Texture2D" path="res://graphics/Grafika_bez_nazwy.png" id="3_74tl6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7iori"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_goaiw")
}, {
"duration": 1.0,
"texture": ExtResource("3_74tl6")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_26k4m"]
radius = 164.0
height = 328.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e2lu6"]
radius = 270.313

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
z_index = 5
position = Vector2(522, 284)
scale = Vector2(0.25, 0.25)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jvbon")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_7iori")
animation = &"new_animation"
autoplay = "new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_26k4m")

[node name="ShootReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootPos" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="ShootPos"]
scale = Vector2(129.5, -201)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="PlayerDetectionZone" type="Area2D" parent="."]
scale = Vector2(4, 4)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_3kvcm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_e2lu6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 1000.0

[node name="PathfindingTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="ShootReloadTimer" to="." method="_on_shoot_reload_timer_timeout"]
[connection signal="timeout" from="ShootReloadTimer" to="PlayerDetectionZone" method="_on_shoot_reload_timer_timeout"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_entered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_body_entered"]
[connection signal="shoot" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_shoot"]
[connection signal="timeout" from="PathfindingTimer" to="." method="_on_pathfinding_timer_timeout"]
